Update API structure
