# app/docs/swagger.json
@@ -35,10 +35,7 @@
                     "400": {
                         "description": "Bad request response",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.CreateMessageErrorResponse"
                         }
                     }
                 }
@@ -58,10 +55,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.MessageProcessingResponse"
                         }
                     }
                 }
@@ -81,10 +75,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.MessageProcessingResponse"
                         }
                     }
                 }
@@ -142,6 +133,25 @@
                     "type": "integer"
                 },
                 "recipient": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateMessageErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.MessageProcessingResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
