# app/internal/models/create_messaage_error_response.go
@@ -1,0 +1,6 @@
+package models
+
+type CreateMessageErrorResponse struct {
+	Message string `json:"message"`
+	Error   string `json:"error"`
+}
