# app/internal/models/message_processing_response.go
@@ -1,0 +1,5 @@
+package models
+
+type MessageProcessingResponse struct {
+	Message string `json:"message"`
+}
